# c-autopoet

./: .travis.yml  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  NEWS  README  README.md  Vagrantfile  configure.ac  configure.in  make.bat  poet.c  prepare  prepare-autotools  winmakefile
app/: Makefile.am  getoptions.c  getoptions.h  poet.c
doc/: Makefile.am  apidoc-stub.xml  entities.xml  logo.xml  poet.xml  poetarticle.xml  prepare-doc
exampledata/: prepare  prepare-data
lib/: Makefile  Makefile.am  poet.c  poet.h
src/: poet.c
test/: Makefile.am  poettest.c  poettest.rb
wrap/: TODO  demo.rb  makepoet.rb
